# Fletcher

./: .clang-format  .gitignore  .prettierignore  AUTHORS  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Cargo.toml  README.md  conanfile.txt  package-lock.json  package.json
ArrowRowBatcher/: CMakeLists.txt  README.md
ArrowRowBatcher/include/: arrow_row_batcher_capi.h  generic_row_batcher.hpp  row_batcher.hpp  sqlite_wal.hpp  write_ahead_log.hpp
ArrowRowBatcher/src/: arrow_row_batcher_capi.cpp  generic_row_batcher.cpp  row_batcher.cpp  sqlite_wal.cpp
ArrowRowBatcher/tests/: CMakeLists.txt  test_batcher.cpp  test_sqlite_wal.cpp
ArrowRowCodec/tests/: CMakeLists.txt  test_errors.cpp  test_fingerprint.cpp  test_nulls.cpp  test_recursive.cpp  test_scalars.cpp
ArrowRowProtoIntegration/: CMakeLists.txt  README.md
ArrowRowProtoIntegration/proto/: maps.proto  simple.proto  temporal.proto
ArrowRowProtoIntegration/tests/: test_generated.cpp
ArrowRowProtoPlugin/: CMakeLists.txt  README.md
ArrowRowProtoPlugin/src/: generator.cpp  generator.hpp  main.cpp  type_mapper.cpp  type_mapper.hpp
ArrowRowProtoPlugin/tests/: CMakeLists.txt  test_type_mapper.cpp
Batcher/tests/: CMakeLists.txt  test_batcher.cpp  test_sqlite_wal.cpp
Codec/: CMakeLists.txt  README.md
Codec/include/: arrow_row_codec_capi.h  arrow_row_view.hpp  crs_utils.hpp  envelope.hpp  positional_codec.hpp  positional_io.hpp  pubsub_provider.hpp  row_codec.hpp  schema_evolution.hpp  write_buffer.hpp
Codec/src/: crs_utils.cpp  positional_codec.cpp  row_codec.cpp  row_reader.hpp  scalar_codec.hpp  schema_evolution.cpp
Codec/tests/: CMakeLists.txt  test_envelope.cpp  test_errors.cpp  test_fingerprint.cpp  test_nulls.cpp  test_positional.cpp  test_recursive.cpp  test_scalars.cpp  test_schema_evolution.cpp
FastDDSPubSubProvider/: CMakeLists.txt  README.md
FastDDSPubSubProvider/include/: fast_dds_capi.h  fast_dds_pubsub_provider.hpp
FastDDSPubSubProvider/src/: fast_dds_capi.cpp  fast_dds_pubsub_provider.cpp
ProtoIntegration/: CMakeLists.txt  README.md
ProtoIntegration/proto/: collections.proto  geoarrow_test.proto  nested.proto  pubsub.proto
ProtoIntegration/tests/: test_generated.cpp  test_geoarrow.cpp  test_schema_evolution.cpp
ProtoPlugin/: CMakeLists.txt  README.md
ProtoPlugin/include/: generator.hpp  type_mapper.hpp
ProtoPlugin/src/: generator.cpp  generator.hpp  main.cpp  type_mapper.cpp  type_mapper.hpp
ProtoPlugin/tests/: CMakeLists.txt  test_type_mapper.cpp
PubSub/: CMakeLists.txt
PubSub/src/: driver.cpp  pubsub_capi.cpp  pubsub_provider.cpp  schema_ipc.cpp
PubSub/tests/: CMakeLists.txt  test_driver.cpp  test_envelope.cpp
WebClient/wasm/: CMakeLists.txt
XrceDDSPubSubProvider/: CMakeLists.txt
XrceDDSPubSubProvider/include/: xrce_dds_capi.h  xrce_dds_pubsub_provider.hpp
XrceDDSPubSubProvider/src/: xrce_dds_capi.cpp  xrce_dds_pubsub_provider.cpp
XrceDDSPubSubProvider/tests/: CMakeLists.txt  test_xrce_provider.cpp
arrow-bridge/: CMakeLists.txt  README.md  conanfile.py
arrow-bridge/.devcontainer/: Dockerfile  devcontainer.json
arrow-bridge/cmake/: fletcher-arrow-bridge-target.cmake
arrow-bridge/src/: codec.cpp  crs_utils.cpp  row_reader.hpp  scalar_codec.cpp  scalar_codec.hpp
arrow-bridge/test_package/: CMakeLists.txt
arrow-bridge/tests/: CMakeLists.txt  test_codec.cpp  test_codec_edge.cpp  test_codec_property_fuzz.cpp
core/: CMakeLists.txt  README.md  conanfile.py
core/.devcontainer/: devcontainer.json
core/cmake/: fletcher-core-target.cmake
core/test_package/: CMakeLists.txt
core/tests/: CMakeLists.txt  test_envelope.cpp  test_positional_io.cpp
fastdds-pubsub-provider/: CMakeLists.txt  README.md  conanfile.py
fastdds-pubsub-provider/.devcontainer/: Dockerfile  devcontainer.json
fastdds-pubsub-provider/cmake/: fletcher-fastdds-pubsub-provider-target.cmake
fastdds-pubsub-provider/include/: fast_dds_pubsub_provider.hpp
fastdds-pubsub-provider/src/: fast_dds_pubsub_provider.cpp  qos_defaults.cpp
fastdds-pubsub-provider/test_package/: CMakeLists.txt
fastdds-pubsub-provider/tests/: CMakeLists.txt  test_driver.cpp  test_fast_dds_pubsub_provider.cpp
gateway/: CMakeLists.txt  README.md  conanfile.py
gateway/cmake/: version.rc.in
gateway/examples/: gateway_main.cpp
gateway/src/: gateway.cpp  gateway.hpp  main.cpp  publish_frame.cpp  publish_frame.hpp  schema_codec.cpp  schema_codec.hpp  web_gateway.cpp  ws_session.cpp  ws_session.hpp
gateway/tests/: CMakeLists.txt  server_main.cpp  test_publish_frame.cpp  test_schema_codec.cpp
integration-tests/fastdds-xrce-interop/: CMakeLists.txt  README.md  conanfile.py
integration-tests/gateway-end-to-end/: CMakeLists.txt  README.md  conanfile.py  package-lock.json  package.json  test-config.yml  tsconfig.json  vitest.config.ts
integration-tests/gateway-fastdds-ts/: CMakeLists.txt  README.md  conanfile.py  package-lock.json  package.json  tsconfig.json  vitest.config.ts
protoc/: CMakeLists.txt  README.md  conanfile.py
protoc/.devcontainer/: Dockerfile  devcontainer.json
protoc/cmake/: fletcher-protoc-target.cmake
protoc/include/: cpp_backend_decode_visitor.hpp  cpp_backend_schema_visitor.hpp  cpp_backend_type_table.hpp  cpp_backend_view_visitor.hpp  generator.hpp  generator_internal.hpp  ir.hpp  schema_builder.hpp  ts_backend_type_table.hpp  ts_backend_visitor.hpp  type_mapper.hpp
protoc/npm/: README.md  package.json
protoc/src/: cpp_backend_decode_visitor.cpp  cpp_backend_schema_visitor.cpp  cpp_backend_type_table.cpp  cpp_backend_view_visitor.cpp  generator.cpp  ir.cpp  main.cpp  recordbatch_accessor_emitter.cpp  recordbatch_accessor_emitter.hpp  schema_ipc.cpp  ts_backend_type_table.cpp  ts_backend_visitor.cpp  type_mapper.cpp
protoc/test_package/: CMakeLists.txt  conanfile.py
protoc/tests/: CMakeLists.txt  check_no_value_or_die_in_emitters.cmake  test_ir.cpp  test_schema_builder.cpp  (+3 more)
pubsub/: .gitignore  CMakeLists.txt  README.md  conanfile.py
pubsub-arrow/: CMakeLists.txt  README.md  conanfile.py
xrcedds-pubsub-provider/: CMakeLists.txt  README.md  conanfile.py
(+578 files in other folders)
